syntax = "proto3";

option go_package = "github.com/ziyan/go_raft/main";

package main;

service RaftService {

  rpc AppendEntries (AppendArg) returns (AppendRes) {} ; 

  rpc RequestVote (VoteArg) returns (VoteRes) {} ;
}

message AppendArg {
  int64 term = 1;
  int64 leader_id = 2;
  int64 prev_log_index = 3; 
  int64 prev_log_term = 4;
  int64 leader_commit = 5;
  repeated Entry entries = 6; 
} 


message Entry {
  string command = 1;
  int64 term = 2; 
}

message AppendRes {
  int64 term = 1;
  bool success = 2; 
} 

message VoteArg {
  int64 term = 1;
  int64 candidate_id = 2; 
  int64 last_log_index = 3; 
  int64 last_log_term = 4; 
} 

message VoteRes{
  int64 term = 1;
  bool vote_granted = 2; 
} 

